--- a/css/main.css
+++ b/css/main.css
@@ -32,9 +32,44 @@ nav.navbar {
     color: var(--pin-pallete-accent);
 }
 
-.scrolled-down{
-    transform:translateY(-100%); transition: all 0.3s ease-in-out;
+.scrolled-down {
+    transform: translateY(-100%); transition: all 0.3s ease-in-out;
 }
-.scrolled-up{
-    transform:translateY(0); transition: all 0.3s ease-in-out;
+
+.scrolled-up {
+    transform: translateY(0); transition: all 0.3s ease-in-out;
+}
+
+.img-container {
+    position: relative;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    transition: .4s ease;
+    /* background-color: rgba(213, 164, 25, 0); */
+    background-color: rgba(32, 71, 130, 0);
+}
+
+.overlay-text {
+    position: absolute;
+    bottom: 5%;
+    left: 5%;
+    color: #fff;
+    opacity: 0;
+}
+
+.img-container:hover .overlay {
+    /* background-color: rgba(213, 164, 25, 0.6); */
+    background-color: rgb(32, 71, 130, 0.6);
+}
+
+.img-container:hover .overlay-text {
+    opacity: 1;
 }
